FrontEnd/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: so1-fase2
  labels:
    name: so1-fase2
    project: monitoring-apis
