FrontEnd/k8s/postgres.yaml
# Deployment de PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: so1-fase2
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: postgres-init
          mountPath: /docker-entrypoint-initdb.d
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - pg_isready -U admin -d monitoring
          initialDelaySeconds: 15
          timeoutSeconds: 2
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - pg_isready -U admin -d monitoring
          initialDelaySeconds: 15
          timeoutSeconds: 2
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: postgres-init
        configMap:
          name: postgres-init-sql

---
# Service de PostgreSQL
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: so1-fase2
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres
